--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="calculator.css" />
   </head>
   <body>
-    <div class="calculator">
+    <h1>Calculator</h1>
+    <div class="container">
       <div class="display">
         <p id="input">0</p>
         <p id="output">0</p>
