--- a/Login Authenticatin/login.html
+++ b/Login Authenticatin/login.html
@@ -32,14 +32,15 @@
       </div>
 
       <div id="homePage" style="display: none">
-        <h2>Login Authentication Page</h2>
+        <h2>Secured Page</h2>
         <p>
-          Welcome to the Page! You have logged in Succesfully.
+          Welcome to the Page! You have logged in to an secured page Succesfully.
         </p>
         <button onclick="logoutUser()">Logout</button>
       </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.js"></script>
     <script src="login.js"></script>
   </body>
 </html>
